k8s/environments/remote/grafana/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  namespace: monitoring
  labels:
    app: grafana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      containers:
        - name: grafana
          image: grafana/grafana:11.5.2
          ports:
            - name: http
              containerPort: 3000
          livenessProbe:
            httpGet:
              path: /api/health
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /api/health
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 5
          volumeMounts:
            - name: data
              mountPath: /var/lib/grafana
            - name: datasource-config
              mountPath: /etc/grafana/provisioning/datasources
            - name: dashboard-config
              mountPath: /etc/grafana/provisioning/dashboards
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "300m"
              memory: "256Mi"
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: grafana-data
        - name: datasource-config
          configMap:
            name: grafana-datasources
        - name: dashboard-config
          configMap:
            name: grafana-dashboards
